--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,8 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-
+                            <!--don't create dependency-reduce pom-->
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <!--exclude signatures from uber jar-->
                             <filters>
                                 <filter>
