--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,11 @@
         </dependency>
 
         <!-- http://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>1.3</version>
-        </dependency>
+        </dependency>-->
 
         <!-- http://mvnrepository.com/artifact/commons-cli/commons-cli -->
         <dependency>
@@ -72,12 +72,12 @@
             <version>1.3.1</version>
         </dependency>
 
-        <dependency>
+      <!--  <dependency>
             <groupId>com.beust</groupId>
             <artifactId>jcommander</artifactId>
             <version>1.48</version>
         </dependency>
-
+-->
         <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
         <dependency>
             <groupId>org.reflections</groupId>
