--- a/FNCmUtilsCore/pom.xml
+++ b/FNCmUtilsCore/pom.xml
@@ -126,6 +126,10 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+            </plugin>
         </plugins>
         <resources>
             <resource>
